# python_assignment

./: .env  Dockerfile  README.md  docker-compose.yml  get_raw_data.py  pyproject.toml  requirements.txt
financial/: database.py  main.py
financial/api/v1/: api.py
financial/api/v1/model/request/: FinancialDataRequest.py  StatisticsRequest.py
financial/api/v1/model/response/: FinancialDataResponse.py  StatisticsResponse.py
financial/entity/: FinancialDataEntity.py  StatisticsModel.py
