[tool.poetry]
name = "python-assignment"
version = "0.1.0"
description = ""
authors = ["Patrick Atienza <atienzapvav@gmail.com>"]
readme = "README.md"
packages = [{ include = "python_assignment" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
requests = "^2.28.2"
peewee = "^3.16.0"
trio = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
